                                  _   _ ____  _
                              ___| | | |  _ \| |
                             / __| | | | |_) | |
                            | (__| |_| |  _ <| |___
                             \___|\___/|_| \_\_____|

                                  Changelog

Yang Tse (17 Nov 2008)
- Fix a remaining problem in the inet_pton() runtime configure check. And
  fix internal Curl_inet_pton() failures to reject certain malformed literals.

- Make configure script check if ioctl with the SIOCGIFADDR command can be
  used, and define HAVE_IOCTL_SIOCGIFADDR if appropriate.

Daniel Stenberg (16 Nov 2008)
- Christian Krause fixed a build failure when building with gss support
  enabled and FTP disabled.

- Added check for NULL returns from strdup() in src/main.c and lib/formdata.c
  - reported by Jim Meyering also prevent buffer overflow on MSDOS when you do
  for example -O on a url with a file name part longer than PATH_MAX letters

- lib/nss.c fixes based on the report by Jim Meyering: I went over and added
  checks for return codes for all calls to malloc and strdup that were
  missing. I also changed a few malloc(13) to use arrays on the stack and a
  few malloc(PATH_MAX) to instead use aprintf() to lower memory use.

- I fixed a memory leak in Curl_nss_connect() when CURLOPT_ISSUERCERT is
  in use.

Daniel Fandrich (14 Nov 2008)
- Added .xml as one of the few common file extensions known by the multipart
  form generator.

- Added some #ifdefs around header files and change the EAGAIN test to
  fix compilation on Cell (reported by Jeff Curley).

Yang Tse (14 Nov 2008)
- Fixed several configure script issues affecting checks for inet_ntoa_r(),
  inet_ntop(), inet_pton(), getifaddrs(), fcntl() and getaddrinfo().

Yang Tse (13 Nov 2008)
- Refactored configure script detection of functions used to set sockets into
  non-blocking mode, and decouple function detection from function capability.

Version 7.19.2 (13 November 2008)
